# tamu_d3m

./: HISTORY.md  HOW_TO_RELEASE.md  MANIFEST.in  README.md  oldest_dependencies.py  run_benchmarks.sh  setup.cfg  setup.py  typing-requirements.txt
d3m/: __init__.py  cli.py  deprecate.py  environment_variables.py  index.py  metrics.py  namespace.py  runtime.py  types.py  utils.py
d3m/base/: primitives.py  utils.py
d3m/container/: dataset.py  list.py  numpy.py  pandas.py  utils.py
d3m/metadata/: base.py  hyperparams.py  params.py  pipeline.py  pipeline_run.py  primitive_names.py  (+1 more)
docs/: cli.rst  conf.py  contribute.rst  copy_primitive.rst  custom.rst  data_preparation.rst  debug.rst  docker.rst  good_primitive.rst  hyperparameters.rst  index.rst  install_primitives.rst  installation.rst  load_datasets.rst  manual_run_primitive.rst  metadata.rst  metalearning.rst  pipeline_predictions.rst  pipelines.rst  primitive_tests.rst  primitives.rst  reference.rst  register_primitive.rst  reproduce_run.rst  start.rst  static_files.rst  use_jupyter.rst  wrap_sklearn.rst  write_pipeline.rst  write_primitive.rst
tests/: asv.conf.json  test_base_utils.py  test_cli_runtime.py  test_compute_scores.py  test_container_metadata.py  test_containers.py  test_contrib_openml.py  test_dataset.py  test_file_reader.py  test_hyperparams.py  test_increment.py  test_index.py  test_metadata.py  test_metrics.py  test_monomial.py  test_null.py  test_params.py  test_pipeline.py  test_primitive_sum.py  test_problem.py  test_random.py  test_runtime.py  test_split.py  test_sum.py  test_utils.py
(+25 files in other folders)
