[pycodestyle]
max-line-length = 200

[metadata]
description-file = README.md

[mypy]
pretty = True
show_error_context = True
show_column_numbers = True
ignore_missing_imports = True
warn_redundant_casts = True
# Enable occasionally to check, but it is hard to
# assure that when supporting multiple Python versions.
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
# TODO: Enable eventually.
# disallow_untyped_decorators = True
